@@ -480,10 +480,12 @@ signal_process ()
   pids=`query_pids "$DAEMON" "$PIDFILE"`
   [ $? -ne 0 -o -z "$pids" ] && return 0
   [ -z "$SIGTERM_TIMEOUT" ] && return 1
-
   sleep "$SIGTERM_TIMEOUT"
+
   kill -KILL $pids >/dev/null 2>&1
-  [ $? -ne 0 ] && return 1 || return 0
+  pids=`query_pids "$DAEMON" "$PIDFILE"`
+  [ $? -ne 0 -o -z "$pids" ] && return 0
+  return 1
 }
 
 ###############################################################################
