@@ -1,5 +1,10 @@
 2006-09-26  Chris Dunlap  <cdunlap@llnl.gov>
 
+	* src/etc/munge.init.in(signal_process): Replaced use of return code
+	  from second kill with another query_pids.  This protects against the
+	  first kill taking slightly too long and the second kill not finding
+	  the process.
+
 	* src/libcommon/log.c(_log_die): Changed "c" var type to "signed char"
 	  since a char is unsigned on AIX.
 	* src/munged/munged.c(daemonize_init): Changed "priority" var type to
